Se agrego a la sección de ofertas un grid de ofertas

--- a/index.html
+++ b/index.html
@@ -132,12 +132,50 @@
 
         <section class="contenedor-ofertas">
           <div class="contenedor-ofertas__title">
-            <h2>Mejores ofertas</h2>
+            <h1>Mejores ofertas</h1>
           </div>
 
-          <div class="grid-ofertas"></div>
+          <div class="grid-ofertas">
+            <div class="grid-ofertas__grid-1">
+              <div class="grid-1__image">
+                <img src="images/grid1.webp" alt="Imagen oferta" />
+              </div>
+              <div class="grid-1__content-text">
+                <h1>
+                  Recibe hasta un 90% de descuento en tus primeras compras
+                </h1>
+                <p>
+                  En tus primeras compras en nuestra tienda online, recibe hasta
+                  un 90% de descuento en tus productos favoritos.
+                </p>
+              </div>
+            </div>
+            <div class="grid-ofertas__grid-2">
+              <div class="grid-2__image">
+                <img src="images/grid2.webp" alt="Imagen oferta" />
+              </div>
+              <div class="grid-2__content-text">
+                <h1>Ofertas por temporadas en ropa para hombres y mujeres</h1>
+                <p>
+                  Encuentra las mejores ofertas por temporadas en ropa para
+                  hombres y mujeres, no te las pierdas. Para invierno, verano,
+                  otoño y primavera.
+                </p>
+              </div>
+            </div>
+            <div class="grid-ofertas__grid-3">
+              <div class="grid-3__content-text">
+                <h1>Encuentra ofertas en ropa para niños</h1>
+                <p>Desde accesorios, hasta calzado y ropa para niños.</p>
+              </div>
+              <div class="grid-3__image">
+                <img src="images/grid3.webp" alt="Imagen oferta" />
+              </div>
+            </div>
+          </div>
 
           <div class="swiper mySwiper">
+            <h2>Ofertas</h2>
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="card">
