Se agrego el loading="lazy" a las imagenes del grid

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         </section>
 
         <section class="contenedor-categorias">
-          <a href="" class="categorias__hombre"><p>Hombres</p></a>
-          <a href="" class="categorias__mujer"><p>Mujeres</p></a>
-          <a href="" class="categorias__niños"><p>Niños</p></a>
-          <a href="" class="categorias__acesorios"><p>Accesorios</p></a>
+          <a href="#" class="categorias__hombre"><p>Hombres</p></a>
+          <a href="#" class="categorias__mujer"><p>Mujeres</p></a>
+          <a href="#" class="categorias__niños"><p>Niños</p></a>
+          <a href="#" class="categorias__acesorios"><p>Accesorios</p></a>
         </section>
 
         <section class="contenedor-ofertas">
@@ -138,7 +138,11 @@
           <div class="grid-ofertas">
             <div class="grid-ofertas__grid-1">
               <div class="grid-1__image">
-                <img src="images/grid1.webp" alt="Imagen oferta" />
+                <img
+                  loading="lazy"
+                  src="images/grid1.webp"
+                  alt="Imagen oferta"
+                />
               </div>
               <div class="grid-1__content-text">
                 <h1>
@@ -152,7 +156,11 @@
             </div>
             <div class="grid-ofertas__grid-2">
               <div class="grid-2__image">
-                <img src="images/grid2.webp" alt="Imagen oferta" />
+                <img
+                  loading="lazy"
+                  src="images/grid2.webp"
+                  alt="Imagen oferta"
+                />
               </div>
               <div class="grid-2__content-text">
                 <h1>Ofertas por temporadas en ropa para hombres y mujeres</h1>
@@ -169,7 +177,11 @@
                 <p>Desde accesorios, hasta calzado y ropa para niños.</p>
               </div>
               <div class="grid-3__image">
-                <img src="images/grid3.webp" alt="Imagen oferta" />
+                <img
+                  loading="lazy"
+                  src="images/grid3.webp"
+                  alt="Imagen oferta"
+                />
               </div>
             </div>
           </div>
