Cambio de logo e iconos del carousel

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wear | Store Online</title>
-
     <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="icons/css/boxicons.css" />
@@ -17,7 +16,7 @@
     <header>
       <nav class="nav">
         <ul class="nav__links" id="navbar">
-          <img src="images/logo.jpg" alt="Logo" class="nav__logo" />
+          <img src="images/logo.png" alt="Logo" class="nav__logo" />
           <li class="nav__links-link">
             <a href="index.html" class="active">Inicio</a>
           </li>
@@ -104,7 +103,10 @@
       <div class="contenedor-general">
         <section class="contenedor-carousel">
           <button id="prevBtn">
-            <i class="bx bxs-left-arrow"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
+              <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5" />
+              <path d="M13.5 16C13.5 16 10.5 13.054 10.5 12C10.5 10.9459 13.5 8 13.5 8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
           </button>
           <div class="carousel-container">
             <div
@@ -160,7 +162,10 @@
             </div>
           </div>
           <button id="nextBtn">
-            <i class="bx bxs-right-arrow"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
+              <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5" />
+              <path d="M10.5 8C10.5 8 13.5 10.946 13.5 12C13.5 13.0541 10.5 16 10.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
           </button>
         </section>
         <section class="contenedor-categorias">
@@ -1363,7 +1368,6 @@
                   viewBox="0 0 24 24"
                   width="24"
                   height="24"
-                  color="#000000"
                   fill="none"
                 >
                   <path
@@ -1387,7 +1391,6 @@
                   viewBox="0 0 24 24"
                   width="24"
                   height="24"
-                  color="#000000"
                   fill="none"
                 >
                   <path
@@ -1416,7 +1419,6 @@
                   viewBox="0 0 24 24"
                   width="24"
                   height="24"
-                  color="#000000"
                   fill="none"
                 >
                   <path
@@ -1434,7 +1436,6 @@
                   viewBox="0 0 24 24"
                   width="24"
                   height="24"
-                  color="#000000"
                   fill="none"
                 >
                   <path
