--- a/pages/login.html
+++ b/pages/login.html
@@ -19,12 +19,7 @@
         </div>
         <div class="login">
           <h1 class="login__title">Iniciar sesión</h1>
-          <form
-            action="login.php"
-            method="post"
-            class="login__form"
-            id="form-login"
-          >
+          <form action="#" method="post" class="login__form" id="form-login">
             <div class="form-group">
               <span class="login__icon">
                 <svg
@@ -51,6 +46,7 @@
                 placeholder="Correo electrónico"
               />
             </div>
+            <div class="input-validation" id="input-validation-email"></div>
             <div class="form-group">
               <span class="login__icon">
                 <svg
@@ -82,13 +78,14 @@
                 </svg>
               </span>
               <input
-                type="text"
-                name="username"
-                id="username"
+                type="password"
+                name="password"
+                id="password"
                 class="login__input"
                 placeholder="Contraseña"
               />
             </div>
+            <div class="input-validation" id="input-validation-password"></div>
             <div class="remember-me">
               <input type="checkbox" name="remember" id="remember" />
               <label for="remember">Recuérdame</label>
@@ -140,5 +137,7 @@
         </div>
       </div>
     </main>
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/login.js"></script>
   </body>
 </html>
