Cambio de estilos de paginación del swiper slider

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </li>
         </ul>
         <div class="nav__user">
-          <img src="images/logo.jpg" alt="Logo" class="nav__logo" />
+          <img src="images/logo.png" alt="Logo" class="nav__logo" />
           <a href="" class="link__cart">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -101,6 +101,7 @@
     </header>
     <main class="main" id="main">
       <div class="contenedor-general">
+        <!-- SECTION CAROUSEL -->
         <section class="contenedor-carousel">
           <button id="prevBtn">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
@@ -168,12 +169,18 @@
           </svg>
           </button>
         </section>
+        <!-- END SECTION CAROUSEL -->
+
+        <!-- SECTION CATEGORIAS -->
         <section class="contenedor-categorias">
           <a href="#" class="categorias__hombre"><p>Hombres</p></a>
           <a href="#" class="categorias__mujer"><p>Mujeres</p></a>
           <a href="#" class="categorias__niños"><p>Niños</p></a>
           <a href="#" class="categorias__acesorios"><p>Accesorios</p></a>
         </section>
+        <!-- END SECTION CATEGORIAS -->
+
+        <!-- SECTION OFERTAS -->
         <section class="contenedor-ofertas">
           <div class="contenedor-ofertas__title">
             <h1>Mejores ofertas</h1>
@@ -755,6 +762,9 @@
             <div class="swiper-pagination"></div>
           </div>
         </section>
+        <!-- END SECTION OFERTAS -->
+
+        <!-- SECTION POPULARES -->
         <section class="contenedor-populares">
           <div class="contenedor-populares__title">
             <h2>Populares</h2>
@@ -1287,6 +1297,7 @@
             <div class="swiper-pagination"></div>
           </div>
         </section>
+        <!-- END SECTION POPULARES -->
       </div>
     </main>
     <footer>
