--- a/index.html
+++ b/index.html
@@ -780,8 +780,8 @@
 
         <!-- SECTION POPULARES -->
         <section class="contenedor-populares scroll-reveal">
-          <div class="contenedor-populares__title scroll-reveal">
-            <h2>Populares</h2>
+          <div class="contenedor-populares__title">
+            <h2 class="scroll-reveal">Populares</h2>
             <div class="custom-select">
               <div class="custom-select__content">
                 <div class="select-selected">Todos</div>
@@ -800,7 +800,7 @@
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="card">
+                <div class="card scroll-reveal">
                   <div class="card__header">
                     <img
                       decoding="async"
@@ -886,7 +886,7 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="card">
+                <div class="card scroll-reveal">
                   <div class="card__header">
                     <img
                       decoding="async"
@@ -972,7 +972,7 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="card">
+                <div class="card scroll-reveal">
                   <div class="card__header">
                     <img
                       decoding="async"
@@ -1058,7 +1058,7 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="card">
+                <div class="card scroll-reveal">
                   <div class="card__header">
                     <img
                       decoding="async"
@@ -1142,7 +1142,7 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="card">
+                <div class="card scroll-reveal">
                   <div class="card__header">
                     <img
                       decoding="async"
@@ -1159,91 +1159,6 @@
                     </p>
                     <p class="card__body-price">
                       <span class="card__body-price-offer">$35.00</span>
-                    </p>
-                  </div>
-                  <div class="card__footer">
-                    <div class="card__footer-stars">
-                      <div class="starts">
-                        <i class="bx bxs-star light"></i>
-                        <i class="bx bxs-star light"></i>
-                        <i class="bx bxs-star light"></i>
-                        <i class="bx bxs-star light"></i>
-                        <i class="bx bxs-star"></i>
-                      </div>
-                      <p>4.5</p>
-                    </div>
-                    <div class="card__footer-buttons">
-                      <button class="button__card cart">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          viewBox="0 0 24 24"
-                          width="24"
-                          height="24"
-                          color="#fff"
-                          fill="none"
-                        >
-                          <path
-                            d="M8 16.0001H15.2632C19.7508 16.0001 20.4333 13.1809 21.261 9.06916C21.4998 7.8832 21.6192 7.29022 21.3321 6.89515C21.1034 6.58048 20.7077 6.51645 20 6.50342"
-                            stroke="currentColor"
-                            stroke-width="1.5"
-                            stroke-linecap="round"
-                          />
-                          <path
-                            d="M9 6.5H17M13 10.5V2.5"
-                            stroke="currentColor"
-                            stroke-width="1.5"
-                            stroke-linecap="round"
-                          />
-                          <path
-                            d="M8 16L5.37873 3.51493C5.15615 2.62459 4.35618 2 3.43845 2H2.5"
-                            stroke="currentColor"
-                            stroke-width="1.5"
-                            stroke-linecap="round"
-                          />
-                          <path
-                            d="M8.88 16H8.46857C7.10522 16 6 17.1513 6 18.5714C6 18.8081 6.1842 19 6.41143 19H17.5"
-                            stroke="currentColor"
-                            stroke-width="1.5"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                          />
-                          <circle
-                            cx="10.5"
-                            cy="20.5"
-                            r="1.5"
-                            stroke="currentColor"
-                            stroke-width="1.5"
-                          />
-                          <circle
-                            cx="17.5"
-                            cy="20.5"
-                            r="1.5"
-                            stroke="currentColor"
-                            stroke-width="1.5"
-                          />
-                        </svg>
-                      </button>
-                      <a href="" class="button__card">Detalles</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="card">
-                  <div class="card__header">
-                    <img
-                      decoding="async"
-                      loading="lazy"
-                      src="images/productos/chaqueta.webp"
-                      alt=""
-                      srcset=""
-                    />
-                  </div>
-                  <div class="card__body">
-                    <h3 class="card__body-title">Chaqueta marrón</h3>
-                    <p class="card__body-text">Chaqueta marrón.</p>
-                    <p class="card__body-price">
-                      <span class="card__body-price-offer">$20.00</span>
                     </p>
                   </div>
                   <div class="card__footer">
