--- a/pages/cart.html
+++ b/pages/cart.html
@@ -344,6 +344,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/scrollreveal.js"></script>   
-    <script src="../js/cart.js"></script>  >
+    <script src="../js/cart.js"></script>  
   </body>
 </html>
