--- a/pages/cart.html
+++ b/pages/cart.html
@@ -13,7 +13,7 @@
   />
     <script src="https://unpkg.com/scrollreveal"></script>
   </head>
-  <body>
+  <body id="body">
     <header>
       <nav class="nav">
         <ul class="nav__links" id="navbar">
